# gameserver-rs

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.director  Dockerfile.frontend  Dockerfile.gameserver  Dockerfile.mmf  Makefile  README.md  build.rs
.github/workflows/: build.yml  rust.yml
director/: Cargo.toml  Dockerfile  build.rs
director-worker/: Cargo.toml
director-worker/src/: lib.rs
director/src/: worker.rs
examples/: Cargo.toml  build.rs
examples/src/gameserver-client/: main.rs
examples/src/match-and-join/: main.rs
examples/src/matchmaker-client/: main.rs
frontend/: Cargo.toml  Dockerfile  build.rs  game_frontend.proto
frontend/src/: main.rs  service.rs
gameserver/: Cargo.toml  Dockerfile  build.rs
gameserver-client/: Cargo.toml
gameserver-client/src/: lib.rs
gameserver/src/: entities.rs  main.rs  services.rs
k8s/bases/gameserver/: fleet.yml  fleet_autoscaler.yml
k8s/bases/matchmaker/: kustomization.yml
k8s/bases/matchmaker/director/: director.yml  kustomization.yml
k8s/bases/matchmaker/frontend/: frontend.yml  kustomization.yml
k8s/bases/matchmaker/mmf/: kustomization.yml
k8s/game-server/: fleet.yml  fleet_autoscaler.yml  game_server_allocation.yml  kustomization.yml
k8s/gameserver/: fleet.yml  game_server_allocation.yml
k8s/gs-multi-alloc/: fleet_patch.yml  kustomization.yml
k8s/gs-single-alloc/: kustomization.yml
k8s/matchmaker/: kustomization.yml  mmf.yml
mmf/: Cargo.toml  Dockerfile  build.rs
mmf/src/: service.rs
proto/: game.proto
src/: client.rs  lib.rs  server.rs
src/director/: main.rs  worker.rs
src/entities/: game_session.rs  mod.rs
src/examples/gameserver-client/: main.rs
src/examples/match-and-join/: main.rs
src/frontend/: service.rs
src/gameserver/: services.rs
src/services/: game.rs
