[package]
name = "game"
version = "0.1.0"
authors = ["yoshd <garlic.ba.0129@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gameserver"
path = "src/gameserver/main.rs"

[[bin]]
name = "gameserver-client"
path = "src/examples/gameserver-client/main.rs"

[dependencies]
tonic = "0.1.0-beta.1"
bytes = "0.4"
prost = "0.5"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
lazy_static = "1.4.0"
http = "0.2"
async-stream = "0.2"
async-trait = "0.1.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
log = "0.4.0"
env_logger = "0.7.1"

agones = { path = "./deps/agones/sdks/rust" }

[build-dependencies]
tonic-build = "0.1.0-beta.1"
