[package]
name = "game"
version = "0.1.0"
authors = ["yoshd <garlic.ba.0129@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gameserver"
path = "src/gameserver/main.rs"

[[bin]]
name = "frontend"
path = "src/frontend/main.rs"

[[bin]]
name = "director"
path = "src/director/main.rs"

[[bin]]
name = "matchfunction"
path = "src/mmf/main.rs"

[[bin]]
name = "matchmaker-client"
path = "src/examples/matchmaker-client/main.rs"

[[bin]]
name = "gameserver-client"
path = "src/examples/gameserver-client/main.rs"

[[bin]]
name = "match-and-join"
path = "src/examples/match-and-join/main.rs"

[dependencies]
tonic = "0.1.1"
bytes = "0.4"
prost = "0.6"
prost-types = "0.6.0"
prost-build = "0.6.0"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
lazy_static = "1.4.0"
http = "0.2.0"
async-stream = "0.2"
async-trait = "0.1.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
log = "0.4.0"
env_logger = "0.7.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
anyhow = { version = "1.0.26", default-features = false }

kube = { version = "0.25.0", default-features = false, features = ["openapi", "rustls-tls"] }
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }

agones = { path = "./deps/agones/sdks/rust" }

[build-dependencies]
tonic-build = "0.1.0"
