[package]
name = "director-worker"
version = "0.1.0"
authors = ["yoshd <garlic.ba.0129@gmail.com>"]
edition = "2018"

[dependencies]
tonic = "0.1.1"
prost = "0.6"
prost-types = "0.6.0"
prost-build = "0.6.0"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
http = "0.2.0"
async-stream = "0.2"
async-trait = "0.1.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.7.1"
anyhow = { version = "1.0.26", default-features = false }

kube = { version = "0.25.0", default-features = false, features = ["openapi", "rustls-tls"] }
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }

gameserver-client = { path = "../gameserver-client", version = "0.1" }
agones = { path = "../deps/agones/sdks/rust" }

[build-dependencies]
tonic-build = "0.1.0"
