[package]
name = "gameserver-client"
version = "0.1.0"
authors = ["yoshd <garlic.ba.0129@gmail.com>"]
edition = "2018"

[dependencies]
tonic = "0.1.1"
prost = "0.6"
prost-types = "0.6.0"
prost-build = "0.6.0"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
async-trait = "0.1.22"

[build-dependencies]
tonic-build = "0.1.0"
